# oaz_engine

./: .gitignore  CMakeLists.txt  CMakeListsBackUp.txt
.run/: Build All Level & Actor.run.xml  Build Application & Run.run.xml  a_cube.run.xml  app_manager_macos.run.xml  l_forest.run.xml  oaz_foundation.run.xml
app/: CMakeLists.txt  oazapp.json
app/src/: main.cpp
app/src/actor/cube/: CMakeLists.txt  actor.json  cube.cpp  cube.h
app/src/level/forest/: CMakeLists.txt  forest.cpp  level.json
bridge/: README.md
cmdline_tools/: create_application_macos.sh  oaz_create_app.sh  runApplication.sh  setDYLD.sh
engine/: CMakeLists.txt
engine/src/metal_renderer/: CMakeLists.txt  renderer.cpp
engine/src/oaz_foundation/: CMakeLists.txt  config.h  oaz_foundation.h  type.h
engine/src/oaz_foundation/actor/: oaz_actor.h
engine/src/oaz_foundation/app/: oaz_app.cpp  oaz_app.h
engine/src/oaz_foundation/level/: oaz_level.cpp  oaz_level.h  oaz_level_adopter.h  tick_queue.cpp  tick_queue.h
engine/src/oaz_foundation/state/: oaz_state.h  single_state.h  state_server.cpp  state_server.h  state_type.h  unified_state_group.cpp  unified_state_group.h
engine/src/platform/app_manager_macos/: CMakeLists.txt  MacOSXBundleInfo.plist.in  main.m
engine/src/platform/app_manager_macos/Application/: AAPLAppDelegate.h  AAPLAppDelegate.m  AAPLConfig.h  CocoaAppDelegate.h  CocoaAppDelegate.m  CocoaView.h  CocoaView.m  CocoaViewController.h  CocoaViewController.m  CocoaWindowDelegate.h  CocoaWindowDelegate.m  OAZView.h  OAZView.m  OAZViewController.h  OAZViewController.m  OAZWindowDelegate.h  OAZWindowDelegate.m
engine/src/platform/app_manager_macos/Bridge/: oazapp_bridge.h  oazapp_bridge.mm
engine/src/platform/app_manager_macos/Renderer/: AAPLRenderer.m
engine/src/platform/app_manager_macos/TickManager/: TickManager.h  TickManager.m  TickManager.mm
src/metal_renderer/: CMakeLists.txt  renderer.cpp  renderer.h
